added friend request notification